    /dev/fll-cdrom, and /dev/fll-cdrom conditional on absence of virt or
    no eject cheatcode.
  * Add debug logging to dracut fll script.
  * Simplify log init from initramfs-tools fll script.
  * Revise utilities required in dracut initramfs and avoid use of touch
    by using shell redirection.
  * Accept fll.debug and fll=debug cheatcodes for debugging.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 23 Dec 2025 03:30:18 +0100

fll-live-initramfs (20251221.3) unstable; urgency=medium

  [ Kel Modderman ]
  * Recommend busybox and eject.
  * Promote dracut to preferred initramfs dependency.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 23 Dec 2025 03:30:03 +0100

fll-live-initramfs (20251221.2) unstable; urgency=medium

  [ Kel Modderman ]
  * Set dracut as default initramfs generator.
  * Remove awk code in copy_with_perc function and simplify, the output
    is rarely seen these days and especially so in systemd environment.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Mon, 22 Dec 2025 00:50:32 +0100

fll-live-initramfs (20251221.1) unstable; urgency=medium

  [ Kel Modderman ]
  * Update calamares by setting readonly fstype and initramfs tool

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Sun, 21 Dec 2025 02:42:48 +0100

fll-live-initramfs (20251216.3) unstable; urgency=medium

  [ Kel Modderman ]
  * Revert experimental omit_dracutmodule settings.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 16 Dec 2025 05:07:13 +0100

fll-live-initramfs (20251216.2) unstable; urgency=medium

  [ Kel Modderman ]
  * Drop kernel_cmdline= from fll dracut module.
  * Experiment with omit_dracutmodule: systemd systemd-cryptsetup
    network bluetooth.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 16 Dec 2025 04:55:34 +0100

fll-live-initramfs (20251216.1) unstable; urgency=medium

  [ Kel Modderman ]
  * Speculatively set a couple of dracut specific markers for:
    - declaring root was found
    - declaring systemd shutdown (exitrd) should be setup