@@ -1,5 +1,15 @@
 #!/bin/bash
 
+###
+# F.U.L.L.S.T.O.R.Y dracut module setup script
+#
+# Copyright: (C) 2025, Kel Modderman <kelvmod@gmail.com>
+# License:   GPLv2
+#
+# F.U.L.L.S.T.O.R.Y Project Homepage:
+# https://github.com/fullstory
+###
+
 check() {
     # live environment only
     [[ $hostonly ]] && return 1
